<resources>
    <string name="app_name">LPL T20</string>
    <string name="matchheading1">Match 1</string>
    <string name="matchheading2">Match 2</string>
    <string name="team1">Colombo Kings</string>
    <string name="team2">Kandy Tuskers</string>
    <string name="team1img">Colombo Kings</string>
    <string name="team2img">Kandy Tuskers</string>
    <string name="score">120/2</string>
    <string name="overs">20 Ov.</string>
    <string name="bowler">D Chameera - 10/2(3)</string>
    <string name="score2">102/4</string>
    <string name="overs2">15.1 Ov.</string>
    <string name="bat2">K Perera - 40* B Taylor - 10*</string>
    <string name="status">Kandy Tuskers Need 19 Runs to Win in 29 Balls</string>
    <string name="img2team">Kandy Tuskers</string>
    <string name="headingoerc">Win Perc.%</string>
    <string name="team11">Galle Gladiators</string>
    <string name="team22">Jaffna Stallions</string>
    <string name="team11img">Galle Gladiators</string>
    <string name="percheading2">Win Perc.%</string>
    <string name="team22img">Jaffna Stallions</string>
    <string name="score12">150/5</string>
    <string name="score22">112/4</string>
    <string name="overs21">20 Ov.</string>
    <string name="overs22">13.1 Ov.</string>
    <string name="play2">S Afridi 20/1(3)</string>
    <string name="play21">S Afridi - 20/2(3)</string>
    <string name="play22">T Perera - 30*  S Malik - 16*</string>
    <string name="status2">Jaffna Stallions Need 39 Runs to Win in 41 Balls</string>
    <string name="headingstandings">Team Standings</string>
    <string name="teamsheader">Teams</string>
    <string name="matchesheader">Matches</string>
    <string name="wonheader">Won</string>
    <string name="lostheader">Lost</string>
    <string name="nrheader">N/R</string>
    <string name="pointsheader">Points</string>
    <string name="nrrheader">Net R/R</string>
    <string name="team1s">Colombo Kings</string>
    <string name="team2s">Dambulla Viiking</string>
    <string name="team3s">Jaffna Stallions</string>
    <string name="team4s">Galle Gladiators</string>
    <string name="team5s">Kandy Tuskers</string>
    <string name="mostrunsheader">Most Runs</string>
    <string name="mostruns1">Danushka Gunathilake</string>
    <string name="mostruns2">Laurie Evans</string>
    <string name="mostruns3">Dasun Shanaka</string>
    <string name="mrname1">Danushka Gunathilake</string>
    <string name="mrteam1">(Galle Gladiators)</string>
    <string name="mrname2">Laurie Evans</string>
    <string name="mrteam2">(Colombo Kings)</string>
    <string name="mrname3">Dasun Shanaka</string>
    <string name="abcd">Dambulla Viiking</string>
    <string name="mrteam3">(Dambulla Viiking)</string>
    <string name="mrruns1">Runs - 476</string>
    <string name="mrruns2">Runs - 289</string>
    <string name="mravg1">Average - 59.50</string>
    <string name="mravg2">Average - 57.80</string>
    <string name="mravg3">Average - 39.71</string>
    <string name="mrsr1">SR - 144.68</string>
    <string name="mrsr2">SR - 170.00</string>
    <string name="mrsr3">SR - 161.20</string>
    <string name="mostwicketsheader">Most Wickets</string>
    <string name="mostwickets1">Wanidu Hasaranga</string>
    <string name="mostwickets11">Wanidu Hasaranga</string>
    <string name="mostwickets2">Dananjaya Lakshan</string>
    <string name="mwwickets11">Wanidu Hasaranga</string>
    <string name="mwname2">Dananjaya Lakshan</string>
    <string name="mwname3">Qais Ahamed</string>
    <string name="mwwickets1">Wickets - 17</string>
    <string name="mwteam1">(Jaffna Stallions)</string>
    <string name="mwteam2">(Galle Gladiators)</string>
    <string name="mwwickets2">Wickets - 13</string>
    <string name="mwteam3">(Colombo Kings)</string>
    <string name="mwwickets3">Wickets - 12</string>
    <string name="mwavg1">Average - 11.29</string>
    <string name="mwec1">Econ - 5.18</string>
    <string name="mwavg2">Average - 17.30</string>
    <string name="mwec2">Econ - 8.65</string>
    <string name="mwavg3">Average - 16.25</string>
    <string name="mwec3">Econ - 6.50</string>
    <string name="img1">img1</string>
    <string name="image1">Image1</string>
    <string name="image2">Image2</string>
    <string name="image3">Image3</string>
    <string name="image4">Image4</string>
    <string name="image5">Image5</string>
    <string name="image6">Image6</string>
    <string name="header">Captured Moments...</string>
    <string name="admintext">Admin</string>
    <string name="matches">Matches</string>
    <string name="live">Live</string>
    <string name="enterteam1">"Enter Team 1: "</string>
    <string name="teamenter1">Enter Team 1:</string>
    <string name="team1in" />
    <string name="team1enter" />
    <string name="team1match">Enter Team 1:</string>
    <string name="inteam1">enter team</string>
    <string name="teamimg1in">Upload Team Photo</string>
    <string name="team2match">"Enter Team 2: "</string>
    <string name="matchnoenter">"Enter Match No: "</string>
    <string name="matchdateenter">"Enter Match Date: "</string>
    <string name="matchdatein">match date</string>
    <string name="submitmatch">Submit</string>
    <string name="matchnoin">match no</string>
    <string name="matchnolive">"Enter Match No: "</string>
    <string name="matchnoinlive">enter match</string>
    <string name="editscorelive">Edit Score</string>
    <string name="deletematch">Delete Match</string>
    <string name="team1name" />
    <string name="teamimg1">img1</string>
    <string name="teamimg2">img2</string>
    <string name="inruns1">runs</string>
    <string name="inwickets1">Wickets</string>
    <string name="inwickets2">wickets</string>
    <string name="inovers1">overs</string>
    <string name="entermatches">enter matches</string>
    <string name="enterwon">"Enter Won: "</string>
    <string name="teammatchin">matches</string>
    <string name="teamwonenter" />
    <string name="teamlostenter">lost</string>
    <string name="teamnrenter">n/r</string>
    <string name="teamwonenter2">won</string>
    <string name="teamnorenter">n/r</string>
    <string name="teamenterstats">"Enter Team: "</string>
    <string name="inteamstats">team</string>
    <string name="enterstatsteam">Enter Stats</string>
    <string name="teamstatbut">Enter Stats</string>
    <string name="entermatchno">"Enter Match No: "</string>
    <string name="runsin1">runs</string>
    <string name="oversin">overs</string>
    <string name="wicketsin1">wickets</string>
    <string name="bowlin1">r/w/o</string>
    <string name="submitlive">Submit</string>
    <string name="productimg1">shirt1</string>
    <string name="productprice">LKR 400</string>
    <string name="productdetails">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="productqty">Quantity</string>
    <string name="productqty_number">3</string>
    <string name="productqtyN">0</string>
    <string name="productqtyNhint">quantity</string>
    <string name="productdetailsbtn1">ADD TO CART</string>
    <string name="productdetailsbtn">ADD TO CART</string>
    <string name="productqtyadd">add to quantity</string>
    <string name="productqtyremove">remove quantity</string>
    <string name="productdetbtnleft">get product on left</string>
    <string name="productdetbtnright">Get the next product</string>
    <string name="shopicon">shop</string>
    <string name="moreicon">more</string>
    <string name="home">home</string>
    <string name="matchesicon1">matches</string>
    <string name="teamicon1">team</string>
    <string name="tname">Enter Team 1</string>
    <string name="logoimage1" />
    <string name="tnameedit2">Enter Team 2</string>
    <string name="logoimage2" />
    <string name="tnameedit3">Enter Team 3</string>
    <string name="logoimage3" />
    <string name="tnameedit4">Enter Team 4</string>
    <string name="button">SAVE</string>
    <string name="logoimage4" />
    <string name="tnameedit5">Enter Team 5</string>
    <string name="logoimage5" />
    <string name="venuetab">VENUES</string>
    <string name="stadiumpic2" />
    <string name="stadium1">Pallekele International Cricket Stadium - Kandy</string>
    <string name="stadiumpic1" />
    <string name="stadiumpic3" />
    <string name="stadiumpic4" />
    <string name="venpic1" />
    <string name="venname1">Enter Venue 1</string>
    <string name="venpic2" />
    <string name="venname2">Enter Venue 2</string>
    <string name="venpic3" />
    <string name="venname3">Enter Venue 3</string>
    <string name="venpic4" />
    <string name="venname4">Enter Venue 4</string>
    <string name="venpic5" />
    <string name="venname5">Enter Venue 5</string>
    <string name="button2">SAVE</string>
    <string name="stadium2">R. Premadasa International Cricket Stadium - Colombo</string>
    <string name="stadium3">Dambulla International Cricket Stadium</string>
    <string name="tab1">SQUAD</string>
    <string name="tabs1">SQUAD</string>
    <string name="tabs2">STATISTICS</string>
    <string name="teamlogostat" />
    <string name="teamlogostatname" />
    <string name="teamlogostatname1">Colombo Kings</string>
    <string name="statdet3">Most Runs - 101 runs</string>
    <string name="statdet1">Highest Team Total - 185 runs</string>
    <string name="statdet2">Lowest Team Total - 75 runs</string>
    <string name="statdet5">Most 100s - 3</string>
    <string name="statdets5">Dinesh Chandimal</string>
    <string name="statdet4">Most Wickets - 6</string>
    <string name="statdets4">Dhammika Prasad</string>
    <string name="tab2">STATISTICS</string>
    <string name="teamlogo" />
    <string name="teamname">COLOMBO KINGS</string>
    <string name="member1" />
    <string name="membername1">Angelo Mathews</string>
    <string name="member2" />
    <string name="membername2">Manpreet gony</string>
    <string name="member3" />
    <string name="membername3">Dinesh Chandimal</string>
    <string name="mem4" />
    <string name="membername4">Andre Russell</string>
    <string name="teamlogo1" />
    <string name="teamname1">Colombo Kings</string>
    <string name="profile">profile</string>
    <string name="addimg">add</string>
    <string name="fullname">Full Name</string>
    <string name="myprofile">My Profile</string>
    <string name="email">Email</string>
    <string name="passwordin">Password</string>
    <string name="terms">Terms and Conditions</string>
    <string name="create">Create Account</string>
    <string name="confirmpasswordin">Confirm Password</string>
    <string name="phonenumberenter">Phone Number</string>
    <string name="paymentdetails">Payment Details</string>
    <string name="paymentview1">Name</string>
    <string name="paymentname">Sandaru Pusswedilla</string>
    <string name="paymentview2">Address</string>
    <string name="paymentview3">CIty</string>
    <string name="paymentcity">Anuradhapura</string>
    <string name="payment4">Zip Code</string>
    <string name="paymentview5">Contact Number</string>
    <string name="paymentzip">3500</string>
    <string name="paymentcontact">0715484568</string>
    <string name="paymentaddress">80, Galenbiduna Wewa, Anuradhapura</string>
    <string name="paymentmethod">Payment Method</string>
    <string name="paymentmeth1">Cash On Delivery</string>
    <string name="paymentmethod2">Card On Delivery</string>
    <string name="checkout">Check Out</string>
</resources>