<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundclr"
    tools:context=".paymentdetails">

    <TextView
        android:id="@+id/paymentdetails"
        android:layout_width="227dp"
        android:layout_height="57dp"
        android:text="@string/paymentdetails"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <TextView
        android:id="@+id/paymentview1"
        android:layout_width="225dp"
        android:layout_height="41dp"
        android:text="@string/paymentview1"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentdetails"
        app:layout_constraintVertical_bias="0.017" />

    <TextView
        android:id="@+id/paymentname"
        android:layout_width="239dp"
        android:layout_height="40dp"
        android:text="@string/paymentname"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentview1"
        app:layout_constraintVertical_bias="0.019" />

    <TextView
        android:id="@+id/paymentview2"
        android:layout_width="166dp"
        android:layout_height="37dp"
        android:text="@string/paymentview2"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentname"
        app:layout_constraintVertical_bias="0.028" />

    <TextView
        android:id="@+id/paymentview3"
        android:layout_width="184dp"
        android:layout_height="40dp"
        android:layout_marginBottom="152dp"
        android:text="@string/paymentview3"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentaddress"
        app:layout_constraintVertical_bias="0.061" />

    <TextView
        android:id="@+id/paymentview4"
        android:layout_width="153dp"
        android:layout_height="41dp"
        android:text="@string/payment4"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toEndOf="@+id/paymentview3"
        app:layout_constraintTop_toBottomOf="@+id/paymentaddress"
        app:layout_constraintVertical_bias="0.034" />

    <TextView
        android:id="@+id/paymentview5"
        android:layout_width="178dp"
        android:layout_height="30dp"
        android:text="@string/paymentview5"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentcity"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/paymentcontact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/paymentcontact"
        android:ems="10"
        android:hint="@string/paymentcontact"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentview5"
        app:layout_constraintVertical_bias="0.036" />

    <EditText
        android:id="@+id/paymentzip"
        android:layout_width="152dp"
        android:layout_height="43dp"
        android:autofillHints="@string/paymentzip"
        android:ems="10"
        android:hint="@string/paymentzip"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.872"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentview4"
        app:layout_constraintVertical_bias="0.03" />

    <EditText
        android:id="@+id/paymentcity"
        android:layout_width="187dp"
        android:layout_height="48dp"
        android:autofillHints="@string/paymentcity"
        android:ems="10"
        android:hint="@string/paymentcity"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/paymentzip"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentview3"
        app:layout_constraintVertical_bias="0.033" />

    <EditText
        android:id="@+id/paymentaddress"
        android:layout_width="345dp"
        android:layout_height="75dp"
        android:autofillHints="@string/paymentaddress"
        android:ems="10"
        android:hint="@string/paymentaddress"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentview2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/paymentmethod"
        android:layout_width="209dp"
        android:layout_height="30dp"
        android:text="@string/paymentmethod"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentcontact"
        app:layout_constraintVertical_bias="0.065" />

    <CheckBox
        android:id="@+id/paymentmeth1"
        android:layout_width="177dp"
        android:layout_height="51dp"
        android:text="@string/paymentmeth1"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentmethod"
        app:layout_constraintVertical_bias="0.121" />

    <CheckBox
        android:id="@+id/paymentmethod2"
        android:layout_width="180dp"
        android:layout_height="54dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/paymentmethod2"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/paymentmeth1"
        app:layout_constraintTop_toBottomOf="@+id/paymentmethod"
        app:layout_constraintVertical_bias="0.125" />

    <Button
        android:id="@+id/paynow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/productdetails"
        android:text="@string/checkout"
        android:textColor="@color/productdetailsbtn"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

</androidx.constraintlayout.widget.ConstraintLayout>